fix: Add flex-wrap for better display on small screens

--- a/css/medium.css
+++ b/css/medium.css
@@ -3,6 +3,10 @@
 	height: 60vh;
 }
 
+.inside #maincontent {
+  flex-wrap: wrap-reverse;
+}
+
 #restaurant-container {
   width: 100%;
 }
